--- a/companyprofile.html
+++ b/companyprofile.html
@@ -81,10 +81,9 @@
 
 
     <section class="bg-black dark:bg-black bug">
-        <div class="text-center text-8xl font-bold text-white mt-">Mengapa harus kami?</div>
       <div class="gap-16 items-center py-7 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
           <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-              <h2 class="mb-20 mt-24 text-7xl tracking-tight font-extrabold text-gray-900 dark:text-white">Berinvestasi dengan tekonologi kami dan dapatkan profit yang memuaskan</h2>
+              <h2 class="mb-20 mt-24 text-7xl tracking-tight font-extrabold text-gray-900 dark:text-white">Nikmati Berinvestasi dengan mudah dengan teknologi</h2>
 
           </div>
           <div class="grid grid-cols-2 gap-4 mt-8">
@@ -127,12 +126,12 @@
   <!-- Testimonial -->
   <div class="container px-5 py-24 mx-auto"></div>
   <div class="flex flex-col text-center w-full ">
-    <h1 class="sm:text-8xl text-2xl font-semibold title-font mb-4 text-gray-900">JUTAAN TRADER TANGGUH TELAH MEMAKAI WEBSITE KAMI 🤫🧏🏻‍♂️</h1>
+    <h1 class="sm:text-8xl text-2xl font-bold title-font mb-4 text-gray-900">JUTAAN TRADER TANGGUH TELAH MEMBUKTIKAN 🤫🧏🏻‍♂️</h1>
 
 
   </div>
   <section class="bg-white">
-    <div class="flex flex-wrap -m-4 text-center mt-24">
+    <div class="flex flex-wrap -m-4 text-center mt-24 mb-20">
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="px-4 py-6 rounded-lg">
           <h2 class="title-font font-medium text-6xl text-gray-900">40+</h2>
@@ -164,13 +163,13 @@
 
     <!-- Card  -->
     
-<div class="text-center text-4xl mb-8 font-bold mb-10">Investasi Sekarang</div>
+<div class="text-center text-4xl mb-8 font-bold mb-10">Investasi Sekarang!</div>
     <div class="bg-white flex flex-row space-x-6 justify-center">
       <div class="p-6 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-black dark:border-gray-700">
         <a href="#">
-          <h5 class="mb-10 text-2xl font-bold tracking-tight text-white">Forex Trader</h5>
+          <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Forex Trader</h5>
         </a>
-        <p class="mb-3 font-normal text-white">Trading saham Forex adalah transaksi menukarkan mata uang negara tempat Anda tinggal dengan mata uang negara asing pilihan Anda.</p>
+        <p class="mb-4 font-normal text-white">Trading saham Forex adalah transaksi menukarkan mata uang negara tempat Anda tinggal dengan mata uang negara asing pilihan Anda.</p>
         <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-gray-500 rounded-lg hover:bg-black focus:ring-4 focus:outline-none focus:ring- dark:bg-white dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Mulai sekarang
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -184,7 +183,7 @@
         <a href="#">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Crypto Trader</h5>
         </a>
-        <p class="mb-3 font-normal text-white">Trading crypto merupakan salah satu cara untuk mendapatkan profit dalam dunia cryptocurrency.</p>
+        <p class="mb-10 font-normal text-white">Trading crypto merupakan salah satu cara untuk mendapatkan profit dalam dunia cryptocurrency.</p>
         <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-gray-500 rounded-lg hover:bg-black focus:ring-4 focus:outline-none focus:ring- dark:bg-white dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Mulai sekarang
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -197,7 +196,7 @@
         <a href="#">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Investasi Saham</h5>
         </a>
-        <p class="mb-3 font-normal text-white">Investasi Saham adalah penanaman modal dengan bentuk penyertaan dana oleh seseorang maupun badan usaha di suatu perusahaan.</p>
+        <p class="mb-4 font-normal text-white">Investasi Saham adalah penanaman modal dengan bentuk penyertaan dana oleh seseorang maupun badan usaha di suatu perusahaan.</p>
         <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-gray-500 rounded-lg hover:bg-black focus:ring-4 focus:outline-none focus:ring- dark:bg-white dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Mulai sekarang
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -210,7 +209,7 @@
         <a href="#">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Pertambagan trader</h5>
         </a>
-        <p class="mb-3 font-normal text-white">Trading pertambangan adalah transaksi  menukarkan mata uang anda menjadi hasil tambang.</p>
+        <p class="mb-10 font-normal text-white">Trading pertambangan adalah transaksi  menukarkan mata uang anda menjadi hasil tambang.</p>
         <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-gray-500 rounded-lg hover:bg-black focus:ring-4 focus:outline-none focus:ring- dark:bg-white dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Mulai sekarang
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -222,10 +221,10 @@
       
   </div>
 
-  <!--  -->
+  <!-- Akun demo -->
   <section class="bg-white dark:bg-gray-900"></section>
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12 mt-12">
-        <h1 class="mb-20  mt-12 font-extrabold tracking-tight leading-none text-black md:text-5xl lg:text-6xl dark:text-black">Kalian pemula? tenang kami meyediakan fitur akun demo </h1>
+        <h1 class="mb-20  mt-12 font-extrabold tracking-tight leading-none text-black md:text-5xl lg:text-6xl dark:text-black">Kalian pemula? tenang kami meyediakan fitur akun Demo </h1>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
             <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-black hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                 Akun Demo
@@ -260,28 +259,28 @@
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" class="w-3 h-3" viewBox="0 0 24 24">
                 <path d="M20 6L9 17l-5-5"></path>
               </svg>
-            </span>bisa
+            </span>biasa
           </p>
           <p class="flex items-center text-gray-600 mb-2">
             <span class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-gray-400 text-white rounded-full flex-shrink-0">
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" class="w-3 h-3" viewBox="0 0 24 24">
                 <path d="M20 6L9 17l-5-5"></path>
               </svg>
-            </span>bisa
+            </span>biasa
           </p>
           <p class="flex items-center text-gray-600 mb-6">
             <span class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-gray-400 text-white rounded-full flex-shrink-0">
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" class="w-3 h-3" viewBox="0 0 24 24">
                 <path d="M20 6L9 17l-5-5"></path>
               </svg>
-            </span>bisa
+            </span>biasa
           </p>
-          <button class="flex items-center mt-auto text-white bg-black border-0 py-2 px-4 w-full focus:outline-none hover:bg-gray-500 rounded">Button
+          <button class="flex items-center mt-auto text-white bg-black border-0 py-2 px-4 w-full focus:outline-none hover:bg-gray-500 rounded">Mulai
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-auto" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
           </button>
-          <p class="text-xs text-gray-500 mt-3">Investasi dan Trading dengan bisa.</p>
+          <p class="text-xs text-gray-500 mt-3">Investasi dan Trading dengan biasa.</p>
         </div>
       </div>
 
